# libgdiplus

./: .azure-pipelines.yml  configure.ac  update_submodules.sh
src/: image.c  image.h
tests/: .gitignore  Makefile.am  fuzzer.c  gtest-driver.cpp  gtest.cpp  testadjustablearrowcap.cpp  testbitmap.cpp  testbits.cpp  testbmpcodec.cpp  testbrush.cpp  testclip.cpp  testcodecs.cpp  testcustomlinecap.cpp  testemfcodec.cpp  testfont.cpp  testgeneral.cpp  testgifcodec.cpp  testgpimage.cpp  testgraphics.cpp  testgraphicsdraw.cpp  testgraphicsfill.cpp  testgraphicspath.cpp  testhatchbrush.cpp  testhelpers.h  testicocodec.cpp  testimageattributes.cpp  testjpegcodec.cpp  testlineargradientbrush.cpp  testmatrix.cpp  testmetafile.cpp  testpathgradientbrush.cpp  testpen.cpp  testpng.cpp  testpngcodec.cpp  testregion.cpp  testreversepath.cpp  testsolidbrush.cpp  teststringformat.cpp  testtext.cpp  testtexturebrush.cpp  (+2 more)
